[project]
name = "agent-tester"
version = "0.1.0"
description = "Continuous evaluation and regression testing for AI agents"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
agent-tester = "agent_tester.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
