[project]
name = "agentcheck"
version = "0.1.0"
description = "AgentCheck — regression testing, evaluation, and quality gates for AI agents"
requires-python = ">=3.11"
authors = [{ name = "Ruxi Zhang", email = "ruxiz2018@gmail.com" }]
license = "Apache-2.0"
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/canis-minor/agentcheck"
Initiative = "https://github.com/canis-minor"

[project.scripts]
agentcheck = "agentcheck.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
